# rune

./: .gitignore  .rune-cache  AGENTS.md  Cargo.toml  Makefile  README.md  bailout_design.md  ecma262.md  issues.md  multi_shape_dispatch_design.md  phase_f_inlining_design.md  progress.md  v0.2_bottleneck_analysis.md  v0.5_promise_design.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/rune_bench/: Cargo.toml
crates/rune_bench/benches/: runtime.rs
crates/rune_bench/results/: 20260622.txt  20260622_jit_on.txt  20260626.txt  20260626_2258_jit_on_post_vec_fix.txt  20260626_jit_on.txt  20260627_jit_final.txt  20260627_post_p22.txt
crates/rune_bench/scripts/: json_round_trip.js  run_v8_baseline.sh  v8_array_push_grow.js  v8_jit_hot_function.js  v8_loop_sum_smi.js  v8_poly_prop.js  v8_proto_chain.js
crates/rune_builtins/: Cargo.toml
crates/rune_builtins/src/: arrays.rs  errors.rs  json.rs  lib.rs  maps.rs  math.rs  promises.rs  sets.rs  strings.rs
crates/rune_bytecode/: Cargo.toml
crates/rune_bytecode/src/: analysis.rs  block.rs  lib.rs  opcode.rs
crates/rune_capi/: Cargo.toml
crates/rune_capi/src/: capi.rs
crates/rune_cli/: Cargo.toml
crates/rune_cli/src/: main.rs  test262.rs
crates/rune_core/: Cargo.toml
crates/rune_core/src/: accessor.rs  array.rs  barrier.rs  env.rs  float.rs  function.rs  gc.rs  heap.rs  lib.rs  object.rs  promise.rs  regexp.rs  shape.rs  string.rs  string_object.rs  value.rs
crates/rune_core/tests/: gc_acceptance_test.rs  gc_test.rs
crates/rune_debugger/: Cargo.toml
crates/rune_debugger/src/: inspector.rs  lib.rs  protocol.rs  server.rs
crates/rune_embed/: Cargo.toml
crates/rune_embed/examples/: closures.rs  destructuring.rs  embeddding.rs  snapshot.rs
crates/rune_embed/src/: afpc.rs  context.rs  lib.rs
crates/rune_embed/tests/: integration_test.rs
crates/rune_interpreter/: Cargo.toml
crates/rune_interpreter/src/: builtins.rs  generator.rs  ic.rs  lib.rs  vm.rs
crates/rune_jit_baseline/: Cargo.toml
crates/rune_jit_baseline/src/: assembler.rs  codegen.rs  codegen_aarch64.rs  ic.rs  lib.rs  templates.rs
crates/rune_jit_cranelift/: Cargo.toml
crates/rune_jit_cranelift/src/: compile.rs  lib.rs  lower.rs  scalar.rs
crates/rune_jit_stencils/: Cargo.toml  build.rs
crates/rune_jit_stencils/src/: lib.rs  patcher.rs
crates/rune_jit_stencils/stencils/: load_const.c  load_local.c  load_smi_16.c  load_smi_32.c  pop_reg.c  push_reg.c  ret.c  rune_load_local.c  rune_push.c  rune_store_local.c  runtime.h  store_local.c
crates/rune_jit_stencils/tests/: path_a.rs  prototype.rs
crates/rune_module/: Cargo.toml
crates/rune_module/src/: eval.rs  lib.rs  linker.rs  loader.rs
crates/rune_parser/: Cargo.toml
crates/rune_parser/src/: ast.rs  emitter.rs  lexer.rs  lib.rs  parser.rs
crates/rune_regex/: Cargo.toml
crates/rune_regex/src/: ast.rs  backtrack.rs  lib.rs  nfa.rs  parse.rs  pikevm.rs
crates/spike_jit/: Cargo.toml
crates/spike_jit/src/: assembler.rs  main.rs
crates/spike_mmtk/: Cargo.toml
crates/spike_mmtk/src/: active_plan.rs  collection.rs  lib.rs  main.rs  object_model.rs  reference_glue.rs  scanning.rs
docs/: v0.3_copy_and_patch_approach.md
papers_gitignore/: paper-Copy-and-Patch.tex
