[package]
name = "rune_embed"
version.workspace = true
edition.workspace = true

[dependencies]
rune_core = { path = "../rune_core" }
rune_bytecode = { path = "../rune_bytecode" }
rune_parser = { path = "../rune_parser" }
rune_interpreter = { path = "../rune_interpreter" }
tracing = { workspace = true }
