[package]
name = "rune_embed"
version.workspace = true
edition.workspace = true

[dependencies]
rune_core = { path = "../rune_core" }
rune_bytecode = { path = "../rune_bytecode" }
rune_parser = { path = "../rune_parser" }
rune_interpreter = { path = "../rune_interpreter" }
rune_jit_baseline = { path = "../rune_jit_baseline" }
rkyv = "0.8"
tracing = { workspace = true }

[[example]]
name = "embedding"
path = "examples/embeddding.rs"

[[example]]
name = "closures"
path = "examples/closures.rs"

[[example]]
name = "destructuring"
path = "examples/destructuring.rs"

[[example]]
name = "snapshot"
path = "examples/snapshot.rs"
