[package]
name = "rune_jit_cranelift"
version.workspace = true
edition.workspace = true

[dependencies]
rune_core = { path = "../rune_core" }
rune_bytecode = { path = "../rune_bytecode" }
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
tracing = { workspace = true }
